Multi-culture UI issues for kimchi plugin Guest module
 Added title tag for table headers
 Externalized all the html and JS text content
 Added data-none-selected-text tag to externalize "Nothing selected" text
 Guest edit window and its columns width adjusted to avoid text overlap in other languages

--- a/ui/css/src/modules/_guests.scss
+++ b/ui/css/src/modules/_guests.scss
@@ -223,7 +223,7 @@
         }
         .wok-guest-list-item {
             padding: 0;
-            width: 240px;
+            width: 290px;
             height: 435px;
             display: inline-block;
             border: 0;
@@ -323,7 +323,7 @@
                 padding-left: 20px;
                 margin-right: 20px;
                 display: block;
-                width: 220px;
+                width: 290px;
                 white-space: nowrap;
                 cursor: default;
             }
@@ -366,7 +366,7 @@
                 background-repeat: no-repeat;
             }
             .menu-flat {
-                width: 240px;
+                width: 290px;
             }
             .btn {
                 width: 100%;
